Lazarus_Athena/include/X11/Xaw/in_arbeit/Intrinsic.h

typedef const char *String;
typedef char *String;
typedef intptr_t	XtIntPtr;
typedef long		XtIntPtr;
typedef struct _WidgetRec *Widget;
typedef struct _WidgetClassRec *WidgetClass;
typedef struct _XtAppStruct *XtAppContext;
typedef char		Boolean;
typedef XtIntPtr	XtArgVal;
typedef unsigned char	XtEnum;
typedef unsigned int	Cardinal;
typedef void*		XtPointer;
typedef struct {
    XtGeometryMask request_mode;
    Position x, y;
    Dimension width, height, border_width;
    Widget sibling;
    int stack_mode;   
} XtWidgetGeometry;
typedef XtUIntPtr XtBlockHookId;
typedef void (*XtBlockHookProc)(
    XtPointer		
);
typedef unsigned long	XtInputMask;
typedef struct {
    String	name;
    XtArgVal	value;
} Arg, *ArgList;
typedef void (*XtCallbackProc)(
    Widget 		,
    XtPointer 		,	
    XtPointer 			
);
typedef struct _XtCallbackRec {
    XtCallbackProc  callback;
    XtPointer	    closure;
} XtCallbackRec, *XtCallbackList;
typedef enum {
	XtCallbackNoList,
	XtCallbackHasNone,
	XtCallbackHasSome
} XtCallbackStatus;
typedef enum  {
    XtGeometryYes,	  
    XtGeometryNo,	  
    XtGeometryAlmost,	  
    XtGeometryDone	  
} XtGeometryResult;
typedef enum {XtGrabNone, XtGrabNonexclusive, XtGrabExclusive} XtGrabKind;
typedef struct _XtResource {
    String	resource_name;	
    String	resource_class;	
    String	resource_type;	
    Cardinal	resource_size;	
    Cardinal	resource_offset;
    String	default_type;	
    XtPointer	default_addr;	
} XtResource, *XtResourceList;
typedef String (*XtLanguageProc)(
    Display*	,
    String	,
    XtPointer	
);
typedef void (*XtErrorMsgHandler)(
    String 		,
    String		,
    String		,
    String		,
    String*		,
    Cardinal*		
);
extern void XtAppNextEvent(
    XtAppContext 	,
    XEvent*		
);
#define XtIMXEvent		1
#define XtIMTimer		2
#define XtIMAlternateInput	4
#define XtIMSignal		8
#define XtIMAll (XtIMXEvent | XtIMTimer | XtIMAlternateInput | XtIMSignal)
extern Boolean XtPending( 
    void
);
extern XtInputMask XtAppPending(
    XtAppContext 	
);
extern XtBlockHookId XtAppAddBlockHook(
    XtAppContext 	,
    XtBlockHookProc 	,
    XtPointer 		
);
extern void XtRemoveBlockHook(
    XtBlockHookId 	
);
#define XtIsRectObj(object)	(_XtCheckSubclassFlag(object, (XtEnum)0x02))
#define XtIsWidget(object)	(_XtCheckSubclassFlag(object, (XtEnum)0x04))
#define XtIsComposite(widget)	(_XtCheckSubclassFlag(widget, (XtEnum)0x08))
#define XtIsConstraint(widget)	(_XtCheckSubclassFlag(widget, (XtEnum)0x10))
#define XtIsShell(widget)	(_XtCheckSubclassFlag(widget, (XtEnum)0x20))
extern Boolean XtIsOverrideShell(Widget );
#define XtIsOverrideShell(widget) \
    (_XtIsSubclassOf(widget, (WidgetClass)overrideShellWidgetClass, \
		     (WidgetClass)shellWidgetClass, (XtEnum)0x20))
#define XtIsWMShell(widget)	(_XtCheckSubclassFlag(widget, (XtEnum)0x40))
extern Boolean XtIsVendorShell(Widget );
#define XtIsVendorShell(widget)	\
    (_XtIsSubclassOf(widget, (WidgetClass)vendorShellWidgetClass, \
		     (WidgetClass)wmShellWidgetClass, (XtEnum)0x40))
extern Boolean XtIsTransientShell(Widget );
#define XtIsTransientShell(widget) \
    (_XtIsSubclassOf(widget, (WidgetClass)transientShellWidgetClass, \
		     (WidgetClass)wmShellWidgetClass, (XtEnum)0x40))
#define XtIsTopLevelShell(widget) (_XtCheckSubclassFlag(widget, (XtEnum)0x80))
extern Boolean XtIsApplicationShell(Widget );
#define XtIsApplicationShell(widget) \
    (_XtIsSubclassOf(widget, (WidgetClass)applicationShellWidgetClass, \
		     (WidgetClass)topLevelShellWidgetClass, (XtEnum)0x80))
extern Boolean XtIsSessionShell(Widget );
#define XtIsSessionShell(widget) \
    (_XtIsSubclassOf(widget, (WidgetClass)sessionShellWidgetClass, \
		     (WidgetClass)topLevelShellWidgetClass, (XtEnum)0x80))
extern void XtRealizeWidget(
    Widget 		
);
void XtUnrealizeWidget(
    Widget 		
);
extern void XtDestroyWidget(
    Widget 		
);
extern void XtSetSensitive(
    Widget 		,
    _XtBoolean 		
);
extern void XtSetMappedWhenManaged(
    Widget 		,
    _XtBoolean 		
);
extern Widget XtNameToWidget(
    Widget 		,
    _Xconst _XtString	
);
extern Widget XtWindowToWidget(
    Display*		,
    Window 		
);
extern XtPointer XtGetClassExtension(
    WidgetClass		,
    Cardinal		,
    XrmQuark		,
    long		,
    Cardinal		
);
extern ArgList XtMergeArgLists(
    ArgList 		,
    Cardinal 		,
    ArgList 		,
    Cardinal 		
);
#define XtVaNestedList  "XtVaNestedList"
#define XtVaTypedArg    "XtVaTypedArg"
extern Display *XtDisplay(
    Widget 		
);
extern Display *XtDisplayOfObject(
    Widget 		
);
extern Screen *XtScreen(
    Widget 		
);
extern Screen *XtScreenOfObject(
    Widget 		
);
extern Window XtWindow(
    Widget 		
);
extern Window XtWindowOfObject(
    Widget 		
);
extern String XtName(
    Widget 		
);
extern WidgetClass XtSuperclass(
    Widget 		
);
extern WidgetClass XtClass(
    Widget 		
);
extern Widget XtParent(
    Widget 		
);
extern void XtMapWidget(Widget );
#define XtMapWidget(widget)	XMapWindow(XtDisplay(widget), XtWindow(widget))
extern void XtUnmapWidget(Widget );
#define XtUnmapWidget(widget)	\
		XUnmapWindow(XtDisplay(widget), XtWindow(widget))
extern void XtAddCallback(
    Widget 		,
    _Xconst _XtString 	,
    XtCallbackProc 	,
    XtPointer 		
);
extern void XtRemoveCallback(
    Widget 		,
    _Xconst _XtString 	,
    XtCallbackProc 	,
    XtPointer 		
);
extern void XtAddCallbacks(
    Widget 		,
    _Xconst _XtString	,
    XtCallbackList 	
);
extern void XtRemoveCallbacks(
    Widget 		,
    _Xconst _XtString 	,
    XtCallbackList 	
);
extern void XtRemoveAllCallbacks(
    Widget 		,
    _Xconst _XtString 	
);
extern void XtCallCallbacks(
    Widget 		,
    _Xconst _XtString 	,
    XtPointer 		
);
extern void XtCallCallbackList(
    Widget		,
    XtCallbackList 	,
    XtPointer 		
);
extern XtCallbackStatus XtHasCallbacks(
    Widget 		,
    _Xconst _XtString 	
);
extern XtGeometryResult XtMakeGeometryRequest(
    Widget 		,
    XtWidgetGeometry*	,
    XtWidgetGeometry*	
);
extern XtGeometryResult XtQueryGeometry(
    Widget 		,
    XtWidgetGeometry*	,
    XtWidgetGeometry*	
);
extern Widget XtCreatePopupShell(
    _Xconst _XtString	,
    WidgetClass 	,
    Widget 		,
    ArgList 		,
    Cardinal 		
);
extern void XtPopup(
    Widget 		,
    XtGrabKind 		
);
extern void XtPopupSpringLoaded(
    Widget 		
);
extern void XtCallbackNone(
    Widget 		,
    XtPointer 		,
    XtPointer 		
);
extern void XtCallbackNonexclusive(
    Widget 		,
    XtPointer 		,
    XtPointer 		
);
extern void XtCallbackExclusive(
    Widget 		,
    XtPointer 		,
    XtPointer 		
);
extern void XtPopdown(
    Widget 		
);
extern void XtCallbackPopdown(
    Widget 		,
    XtPointer 		,
    XtPointer 		
);
extern void XtMenuPopupAction(
    Widget 		,
    XEvent*		,
    String*		,
    Cardinal*		
);
extern Widget XtCreateWidget(
    _Xconst _XtString 	,
    WidgetClass 	,
    Widget 		,
    ArgList 		,
    Cardinal 		
);
extern Widget XtCreateManagedWidget(
    _Xconst _XtString 	,
    WidgetClass 	,
    Widget 		,
    ArgList 		,
    Cardinal 		
);
extern Widget XtCreateApplicationShell( 
    _Xconst _XtString 	,
    WidgetClass 	,
    ArgList 		,
    Cardinal 		
);
extern Widget XtAppCreateShell(
    _Xconst _XtString	,
    _Xconst _XtString	,
    WidgetClass 	,
    Display*		,
    ArgList 		,
    Cardinal 		
);
extern void XtToolkitInitialize(
    void
);
extern XtLanguageProc XtSetLanguageProc(
    XtAppContext	,
    XtLanguageProc	,
    XtPointer		
);
extern void XtDisplayInitialize(
    XtAppContext 	,
    Display*		,
    _Xconst _XtString	,
    _Xconst _XtString	,
    XrmOptionDescRec* 	,
    Cardinal 		,
    int*		,
    _XtString*		
);
extern Widget XtOpenApplication(
    XtAppContext*	,
    _Xconst _XtString	,
    XrmOptionDescList 	,
    Cardinal 		,
    int*		,
    _XtString*		,
    String*		,
    WidgetClass		,
    ArgList 		,
    Cardinal 		
);
extern Widget XtAppInitialize( 
    XtAppContext*	,
    _Xconst _XtString	,
    XrmOptionDescList 	,
    Cardinal 		,
    int*		,
    _XtString*		,
    String*		,
    ArgList 		,
    Cardinal 		
);
extern Widget XtInitialize( 
    _Xconst _XtString 	,
    _Xconst _XtString 	,
    XrmOptionDescRec* 	,
    Cardinal 		,
    int*		,
    _XtString*		
);
extern Display *XtOpenDisplay(
    XtAppContext 	,
    _Xconst _XtString	,
    _Xconst _XtString	,
    _Xconst _XtString	,
    XrmOptionDescRec*	,
    Cardinal 		,
    int*		,
    _XtString*		
);
extern XtAppContext XtCreateApplicationContext(
    void
);
extern void XtAppSetFallbackResources(
    XtAppContext 	,
    String*		
);
extern void XtDestroyApplicationContext(
    XtAppContext 	
);
extern void XtInitializeWidgetClass(
    WidgetClass 	
);
extern XtAppContext XtWidgetToApplicationContext(
    Widget 		
);
extern XtAppContext XtDisplayToApplicationContext(
    Display*		
);
extern XrmDatabase XtDatabase(
    Display*		
);
extern XrmDatabase XtScreenDatabase(
    Screen*		
);
extern void XtCloseDisplay(
    Display*		
);
extern void XtGetApplicationResources(
    Widget 		,
    XtPointer 		,
    XtResourceList 	,
    Cardinal 		,
    ArgList 		,
    Cardinal 		
);
extern void XtGetSubresources(
    Widget 		,
    XtPointer 		,
    _Xconst _XtString 	,
    _Xconst _XtString 	,
    XtResourceList 	,
    Cardinal 		,
    ArgList 		,
    Cardinal 		
);
extern void XtSetValues(
    Widget 		,
    ArgList 		,
    Cardinal 		
);
extern void XtGetValues(
    Widget 		,
    ArgList 		,
    Cardinal 		
);
extern void XtSetSubvalues(
    XtPointer 		,
    XtResourceList 	,
    Cardinal 		,
    ArgList 		,
    Cardinal 		
);
extern void XtGetSubvalues(
    XtPointer 		,
    XtResourceList 	,
    Cardinal 		,
    ArgList 		,
    Cardinal 		
);
extern void XtGetResourceList(
    WidgetClass 	,
    XtResourceList*	,
    Cardinal*		
);
extern void XtGetConstraintResourceList(
    WidgetClass 	,
    XtResourceList*	,
    Cardinal*		
);
#define XtUnspecifiedPixmap	((Pixmap)2)
#define XtUnspecifiedShellInt	(-1)
#define XtUnspecifiedWindow	((Window)2)
#define XtUnspecifiedWindowGroup ((Window)3)
#define XtCurrentDirectory	"XtCurrentDirectory"
#define XtDefaultForeground	"XtDefaultForeground"
#define XtDefaultBackground	"XtDefaultBackground"
#define XtDefaultFont		"XtDefaultFont"
#define XtDefaultFontSet	"XtDefaultFontSet"
#define XtOffset(p_type,field) \
	((Cardinal) (((char *) (&(((p_type)NULL)->field))) - ((char *) NULL)))
#define XtOffsetOf(s_type,field) offsetof(s_type,field)
typedef struct _XtCheckpointTokenRec {
    int		save_type;
    int		interact_style;
    Boolean	shutdown;
    Boolean	fast;
    Boolean	cancel_shutdown;
    int		phase;
    int		interact_dialog_type;	
    Boolean	request_cancel;		
    Boolean	request_next_phase;	
    Boolean	save_success;		
    int		type;		
    Widget	widget;		
} XtCheckpointTokenRec, *XtCheckpointToken;
XtCheckpointToken XtSessionGetToken(
    Widget		
);
void XtSessionReturnToken(
    XtCheckpointToken	
);
extern XtErrorMsgHandler XtAppSetErrorMsgHandler(
    XtAppContext 	,
    XtErrorMsgHandler 	 _X_NORETURN
);
extern void XtSetErrorMsgHandler( 
    XtErrorMsgHandler 	 _X_NORETURN
);
extern XtErrorMsgHandler XtAppSetWarningMsgHandler(
    XtAppContext 	,
    XtErrorMsgHandler 	
);