X11-Include.xxxxxxxxxxxxxxxx/X11/Intrinsic.pp


procedure XtAppNextEvent(para1:TXtAppContext; para2:PXEvent);cdecl;external;
    const
      XtIMXEvent = 1;      
      XtIMTimer = 2;      
      XtIMAlternateInput = 4;      
      XtIMSignal = 8;      
      XtIMAll = ((XtIMXEvent or XtIMTimer) or XtIMAlternateInput) or XtIMSignal;      


function XtPending:TBoolean;cdecl;external;

function XtAppPending(para1:TXtAppContext):TXtInputMask;cdecl;external;

function XtAppAddBlockHook(para1:TXtAppContext; para2:TXtBlockHookProc; para3:TXtPointer):TXtBlockHookId;cdecl;external;

procedure XtRemoveBlockHook(para1:TXtBlockHookId);cdecl;external;

    function XtIsRectObj(object : longint) : longint;    

    function XtIsWidget(object : longint) : longint;    

    function XtIsComposite(widget : longint) : longint;    

    function XtIsConstraint(widget : longint) : longint;    

    function XtIsShell(widget : longint) : longint;    

{$undef XtIsOverrideShell}
function XtIsOverrideShell(para1:TWidget):TBoolean;cdecl;external;
    function XtIsOverrideShell(widget : longint) : longint;    

    function XtIsWMShell(widget : longint) : longint;    

{$undef XtIsVendorShell}
function XtIsVendorShell(para1:TWidget):TBoolean;cdecl;external;
    function XtIsVendorShell(widget : longint) : longint;    

{$undef XtIsTransientShell}
function XtIsTransientShell(para1:TWidget):TBoolean;cdecl;external;
    function XtIsTransientShell(widget : longint) : longint;    

    function XtIsTopLevelShell(widget : longint) : longint;    

{$undef XtIsApplicationShell}
function XtIsApplicationShell(para1:TWidget):TBoolean;cdecl;external;
    function XtIsApplicationShell(widget : longint) : longint;    

{$undef XtIsSessionShell}
function XtIsSessionShell(para1:TWidget):TBoolean;cdecl;external;
    function XtIsSessionShell(widget : longint) : longint;    


procedure XtRealizeWidget(para1:TWidget);cdecl;external;

procedure XtUnrealizeWidget(para1:TWidget);cdecl;external;

procedure XtDestroyWidget(para1:TWidget);cdecl;external;

procedure XtSetSensitive(para1:TWidget; para2:TXtBoolean);cdecl;external;

procedure XtSetMappedWhenManaged(para1:TWidget; para2:TXtBoolean);cdecl;external;

function XtNameToWidget(para1:TWidget; _XtString:TXconst):TWidget;cdecl;external;

function XtWindowToWidget(para1:PDisplay; para2:TWindow):TWidget;cdecl;external;

function XtGetClassExtension(para1:TWidgetClass; para2:TCardinal; para3:TXrmQuark; para4:longint; para5:TCardinal):TXtPointer;cdecl;external;

(* error 
    ((void)( (arg).name = (n), (arg).value = (XtArgVal)(d) ))
in define line 1161 *)

function XtMergeArgLists(para1:TArgList; para2:TCardinal; para3:TArgList; para4:TCardinal):TArgList;cdecl;external;

    const
      XtVaNestedList = 'XtVaNestedList';      
      XtVaTypedArg = 'XtVaTypedArg';      
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : TXtVarArgsList;

{$ifndef _XtIntrinsicP_h}



function XtDisplay(para1:TWidget):PDisplay;cdecl;external;

function XtDisplayOfObject(para1:TWidget):PDisplay;cdecl;external;

function XtScreen(para1:TWidget):PScreen;cdecl;external;

function XtScreenOfObject(para1:TWidget):PScreen;cdecl;external;

function XtWindow(para1:TWidget):TWindow;cdecl;external;

function XtWindowOfObject(para1:TWidget):TWindow;cdecl;external;

function XtName(para1:TWidget):TString;cdecl;external;

function XtSuperclass(para1:TWidget):TWidgetClass;cdecl;external;

function XtClass(para1:TWidget):TWidgetClass;cdecl;external;

function XtParent(para1:TWidget):TWidget;cdecl;external;
{$endif}

{$undef XtMapWidget}

procedure XtMapWidget(para1:TWidget);cdecl;external;
    function XtMapWidget(widget : longint) : longint;    

{$undef XtUnmapWidget}
procedure XtUnmapWidget(para1:TWidget);cdecl;external;
    function XtUnmapWidget(widget : longint) : longint;    


procedure XtAddCallback(para1:TWidget; _XtString:TXconst; para3:TXtCallbackProc; para4:TXtPointer);cdecl;external;

procedure XtRemoveCallback(para1:TWidget; _XtString:TXconst; para3:TXtCallbackProc; para4:TXtPointer);cdecl;external;

procedure XtAddCallbacks(para1:TWidget; _XtString:TXconst; para3:TXtCallbackList);cdecl;external;

procedure XtRemoveCallbacks(para1:TWidget; _XtString:TXconst; para3:TXtCallbackList);cdecl;external;

procedure XtRemoveAllCallbacks(para1:TWidget; _XtString:TXconst);cdecl;external;

procedure XtCallCallbacks(para1:TWidget; _XtString:TXconst; para3:TXtPointer);cdecl;external;

procedure XtCallCallbackList(para1:TWidget; para2:TXtCallbackList; para3:TXtPointer);cdecl;external;

function XtHasCallbacks(para1:TWidget; _XtString:TXconst):TXtCallbackStatus;cdecl;external;


function XtMakeGeometryRequest(para1:TWidget; para2:PXtWidgetGeometry; para3:PXtWidgetGeometry):TXtGeometryResult;cdecl;external;

function XtQueryGeometry(para1:TWidget; para2:PXtWidgetGeometry; para3:PXtWidgetGeometry):TXtGeometryResult;cdecl;external;

function XtCreatePopupShell(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; para4:TArgList; para5:TCardinal):TWidget;cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : TWidget;


procedure XtPopup(para1:TWidget; para2:TXtGrabKind);cdecl;external;

procedure XtPopupSpringLoaded(para1:TWidget);cdecl;external;

procedure XtCallbackNone(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;

procedure XtCallbackNonexclusive(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;

procedure XtCallbackExclusive(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;

procedure XtPopdown(para1:TWidget);cdecl;external;

procedure XtCallbackPopdown(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;

procedure XtMenuPopupAction(para1:TWidget; para2:PXEvent; para3:PString; para4:PCardinal);cdecl;external;

function XtCreateWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; para4:TArgList; para5:TCardinal):TWidget;cdecl;external;

function XtCreateManagedWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; para4:TArgList; para5:TCardinal):TWidget;cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : TWidget;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
 : TWidget;



function XtCreateApplicationShell(_XtString:TXconst; para2:TWidgetClass; para3:TArgList; para4:TCardinal):TWidget;cdecl;external;

function XtAppCreateShell(_XtString:TXconst; _XtString:TXconst; para3:TWidgetClass; para4:PDisplay; para5:TArgList; 
               para6:TCardinal):TWidget;cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : TWidget;


procedure XtToolkitInitialize;cdecl;external;

function XtSetLanguageProc(para1:TXtAppContext; para2:TXtLanguageProc; para3:TXtPointer):TXtLanguageProc;cdecl;external;

procedure XtDisplayInitialize(para1:TXtAppContext; para2:PDisplay; _XtString:TXconst; _XtString:TXconst; para5:PXrmOptionDescRec; 
                para6:TCardinal; para7:Plongint; para8:PXtString);cdecl;external;

function XtOpenApplication(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; para8:TWidgetClass; para9:TArgList; para10:TCardinal):TWidget;cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : TWidget;



function XtAppInitialize(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; para8:TArgList; para9:TCardinal):TWidget;cdecl;external;

(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : TWidget;



function XtInitialize(_XtString:TXconst; _XtString:TXconst; para3:PXrmOptionDescRec; para4:TCardinal; para5:Plongint; 
               para6:PXtString):TWidget;cdecl;external;

function XtOpenDisplay(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; para5:PXrmOptionDescRec; 
               para6:TCardinal; para7:Plongint; para8:PXtString):PDisplay;cdecl;external;
function XtCreateApplicationContext:TXtAppContext;cdecl;external;

procedure XtAppSetFallbackResources(para1:TXtAppContext; para2:PString);cdecl;external;

procedure XtDestroyApplicationContext(para1:TXtAppContext);cdecl;external;

procedure XtInitializeWidgetClass(para1:TWidgetClass);cdecl;external;

function XtWidgetToApplicationContext(para1:TWidget):TXtAppContext;cdecl;external;

function XtDisplayToApplicationContext(para1:PDisplay):TXtAppContext;cdecl;external;

function XtDatabase(para1:PDisplay):TXrmDatabase;cdecl;external;

function XtScreenDatabase(para1:PScreen):TXrmDatabase;cdecl;external;

procedure XtCloseDisplay(para1:PDisplay);cdecl;external;

procedure XtGetApplicationResources(para1:TWidget; para2:TXtPointer; para3:TXtResourceList; para4:TCardinal; para5:TArgList; 
                para6:TCardinal);cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : pointer;


procedure XtGetSubresources(para1:TWidget; para2:TXtPointer; _XtString:TXconst; _XtString:TXconst; para5:TXtResourceList; 
                para6:TCardinal; para7:TArgList; para8:TCardinal);cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : pointer;


procedure XtSetValues(para1:TWidget; para2:TArgList; para3:TCardinal);cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : pointer;


procedure XtGetValues(para1:TWidget; para2:TArgList; para3:TCardinal);cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : pointer;


procedure XtSetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal; para4:TArgList; para5:TCardinal);cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : pointer;


procedure XtGetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal; para4:TArgList; para5:TCardinal);cdecl;external;
(* error 
) _X_SENTINEL(0);
 in declarator_list *)
      var
 : pointer;


procedure XtGetResourceList(para1:TWidgetClass; para2:PXtResourceList; para3:PCardinal);cdecl;external;

procedure XtGetConstraintResourceList(para1:TWidgetClass; para2:PXtResourceList; para3:PCardinal);cdecl;external;
    function XtUnspecifiedPixmap : TPixmap;      

    const
      XtUnspecifiedShellInt = -(1);      

    function XtUnspecifiedWindow : TWindow;      

    function XtUnspecifiedWindowGroup : TWindow;      

    const
      XtCurrentDirectory = 'XtCurrentDirectory';      
      XtDefaultForeground = 'XtDefaultForeground';      
      XtDefaultBackground = 'XtDefaultBackground';      
      XtDefaultFont = 'XtDefaultFont';      
      XtDefaultFontSet = 'XtDefaultFontSet';      

    function XtOffset(p_type,field : longint) : TCardinal;    

{$ifdef offsetof}
    function XtOffsetOf(s_type,field : longint) : longint;    

{$else}
(* error 
#define XtOffsetOf(s_type,field) XtOffset(s_type*,field)
in define line 1675 *)
{$endif}







    type
      PXtCheckpointTokenRec = ^TXtCheckpointTokenRec;
      TXtCheckpointTokenRec = record
          save_type : longint;
          interact_style : longint;
          shutdown : TBoolean;
          fast : TBoolean;
          cancel_shutdown : TBoolean;
          phase : longint;
          interact_dialog_type : longint;
          request_cancel : TBoolean;
          request_next_phase : TBoolean;
          save_success : TBoolean;
          _type : longint;
          widget : TWidget;
        end;
      TXtCheckpointToken = PXtCheckpointTokenRec;
      PXtCheckpointToken = ^TXtCheckpointToken;


function XtSessionGetToken(para1:TWidget):TXtCheckpointToken;cdecl;external;

procedure XtSessionReturnToken(para1:TXtCheckpointToken);cdecl;external;

function XtAppSetErrorMsgHandler(para1:TXtAppContext; _X_NORETURN:TXtErrorMsgHandler):TXtErrorMsgHandler;cdecl;external;

procedure XtSetErrorMsgHandler(_X_NORETURN:TXtErrorMsgHandler);cdecl;external;

function XtAppSetWarningMsgHandler(para1:TXtAppContext; para2:TXtErrorMsgHandler):TXtErrorMsgHandler;cdecl;external;

